--- a/Apps/Navigation/CMakeLists.txt
+++ b/Apps/Navigation/CMakeLists.txt
@@ -19,6 +19,10 @@ set (OMP_FRIENDLY_GCC_MAJOR_VERSION 7)
 # Path to OMP-Friendly GCC Compiler (will only be used on Mac OS systems)
 set (OMP_FRIENDLY_GCC_PATH /usr/local/Cellar/gcc/7.2.0/bin/)
 
+
+# Path to VTKConfig.cmake (not mandatory if VTK is installed at a standard location)
+set (VTK_PATH /usr/local/VTK-8.1.0/lib/cmake/vtk-8.1)
+
 ################################################################################
 #
 #
@@ -116,6 +120,10 @@ include( ${CGAL_USE_FILE} )
 include( CGAL_CreateSingleSourceCGALProgram )
 
 
+# Find VTK Package
+find_package(VTK REQUIRED PATHS ${VTK_PATH})
+include(${VTK_USE_FILE})
+
 
 # Find Eigen3
 find_package(Eigen3 3.1.0 REQUIRED)
@@ -149,6 +157,7 @@ ${CGAL_LIBRARIES}
 ${CGAL_3RD_PARTY_LIBRARIES}
 # ${SBGATCORE_LIBRARY}
 ${ASPEN_LIBRARY}
+${VTK_LIBRARIES}
 )
 
 
