--- a/Apps/RayTracing/CMakeLists.txt
+++ b/Apps/RayTracing/CMakeLists.txt
@@ -32,7 +32,7 @@ set (OMP_FRIENDLY_GCC_PATH /usr/local/Cellar/gcc/7.2.0/bin/)
 if (EXISTS /home/bebe0705/.am_fortuna)
 	set(IS_FORTUNA ON)
 	set(RBK_LOC "/home/bebe0705/libs/local/lib/cmake/RigidBodyKinematics")
-	set(SBGAT_LOC "/home/bebe0705/libs/local/lib/cmake/SbgatCore")
+	# set(SBGAT_LOC "/home/bebe0705/libs/local/lib/cmake/SbgatCore")
 	set(ASPEN_LOC "/home/bebe0705/libs/local/lib/cmake/ASPEN")
 
 else()
@@ -107,9 +107,9 @@ include( ${CGAL_USE_FILE} )
 include( CGAL_CreateSingleSourceCGALProgram )
 
 
-# Find SBGAT 
-find_package(SbgatCore REQUIRED PATHS ${SBGAT_LOC})
-include_directories(${SBGATCORE_INCLUDE_HEADER})
+# # Find SBGAT 
+# find_package(SbgatCore REQUIRED PATHS ${SBGAT_LOC})
+# include_directories(${SBGATCORE_INCLUDE_HEADER})
 
 
 # Find Eigen3
@@ -140,9 +140,9 @@ set(library_dependencies
 ${ARMADILLO_LIBRARIES}
 ${Boost_LIBRARIES}
 ${RBK_LIBRARY}
-${CGAL_LIBRARIES} 
-${CGAL_3RD_PARTY_LIBRARIES}
-${SBGATCORE_LIBRARY}
+# ${CGAL_LIBRARIES} 
+# ${CGAL_3RD_PARTY_LIBRARIES}
+# ${SBGATCORE_LIBRARY}
 ${ASPEN_LIBRARY}
 )
 
